@@ -24,7 +24,6 @@
  THE SOFTWARE. -->
  
 <SyntaxMode name = "C#" mimeType="text/x-csharp">
-	<Delimiters>&amp;&lt;&gt;~!%^*()-+=|\#/{}[]:;"' ,	.?</Delimiters>
 
 	<EolSpan color = "preprocessor" rule="PreProcessor">#</EolSpan>
 	<EolSpan color = "comment" rule="XmlDocumentation" tagColor="commenttag">///</EolSpan>
@@ -49,6 +48,10 @@
 		<Begin>&apos;</Begin>
 		<End>&apos;</End>
 	</Span>
+	
+	<Match color = "literal">\d+(U|u|L|l|UL|Ul|uL|ul|LU|Lu|lU|lu)?</Match>
+	<Match color = "literal">0[xX][a-fA-F\d]+(U|u|L|l|UL|Ul|uL|ul|LU|Lu|lU|lu)?</Match>
+	<Match color = "literal">\d+(\.\d+)?([eE][+-]\d+)?[FfDdMm]?</Match>
 	
 	<Keywords color = "kw:access">
 		<Word>this</Word>
